# PannoireEngine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
doc/html/: _component_type_8h.html  _component_type_8h_source.html  _e_c_s_8cpp.html  _e_c_s_8h.html  _e_c_s_8h.js  _e_c_s_8h_source.html  _engine_8cpp.html  _engine_8h.html  _engine_8h_source.html  _pool_8cpp.html  _pool_8h.html  _pool_8h_source.html  _render_8cpp.html  _render_8h.html  _render_8h_source.html  annotated.html  annotated_dup.js  class_p_e_1_1_engine_1_1_component_handler-members.html  class_p_e_1_1_engine_1_1_component_handler.html  class_p_e_1_1_engine_1_1_component_handler.js  class_p_e_1_1_engine_1_1_e_c_s-members.html  class_p_e_1_1_engine_1_1_e_c_s.html  class_p_e_1_1_engine_1_1_e_c_s.js  class_p_e_1_1_engine_1_1_engine-members.html  class_p_e_1_1_engine_1_1_engine.html  class_p_e_1_1_engine_1_1_engine.js  class_p_e_1_1_engine_1_1_entity_handler-members.html  class_p_e_1_1_engine_1_1_entity_handler.html  class_p_e_1_1_engine_1_1_entity_handler.js  class_p_e_1_1_engine_1_1_memory_pool-members.html  class_p_e_1_1_engine_1_1_memory_pool.html  class_p_e_1_1_engine_1_1_memory_pool.js  class_p_e_1_1_engine_1_1_object_pool-members.html  class_p_e_1_1_engine_1_1_object_pool.html  class_p_e_1_1_engine_1_1_object_pool.js  class_p_e_1_1_render_1_1_render-members.html  class_p_e_1_1_render_1_1_render.html  class_p_e_1_1_render_1_1_render.js  classes.html  dir_3072bc1f55ed1280fe4fbe6b21c78379.html  (+51 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js
include/PE/Component/: Type.h  Types.h
include/PE/ECS/: Common.h  Component.h  ComponentSet.h  Defines.h  ECS.h  Entity.h  Manager.h  Pool.h  System.h  Utils.h  View.h
include/PE/ECS_b/: Common.h  Component.h  Entity.h  Pool.h  System.h  Utils.h
include/PE/Engine/: API.h  API_Helper.h  Common.h  Component.h  ComponentType.h  Core.h  ECS.h  ECS_old.h  Engine.h  Entity.h  IContext.h  IRenderSystem.h  IScriptTranspiler.h  ISystem.h  LoggerDecorator.h  Pool.h  Properties.h  Scene.h  Script.h  Scripting.h  ScriptingManager.h  System.h  TypescriptTranspiler.h  Utils.h
include/PE/Render/: Camera.h  Context.h  Defines.h  Material.h  Mesh.h  Model.h  Render.h  RenderSystem.h  Render_old.h  Renderer.h  Shader.h  Texture.h
include/PE/Resource/: Defines.h  Exporter.h  IFileMonitor.h  IResource.h  Importer.h  Loader.h  NullAllocator.h  Properties.h  Resource.h  ResourceAllocator.h  ResourceCounter.h  ResourceData.h  ResourceFactory.h  ResourceHandle.h  ResourceManager.h  ResourcePool.h  Utils.h  WindowsFileMonitor.h
include/PE/Resource/Types/: BaseResource.h  TextureResource.h
include/PE/Scripting/: Script.h  ScriptEngine.h  Scripting.h
include/PE/Utils/: ConsoleLogger.h  ILogger.h  Listener.h  ListenerBus.h  Locator.h  NullLogger.h  Utils.h
js/: PannoireEngineLib.js  TypeScript.js
lib/: CMakeLists.txt
lib/include/: SimpleSignal.h
profiles/: default.txt  mingw.txt
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
src/Component/: CMakeLists.txt
src/ECS/: CMakeLists.txt  Component.cpp  ComponentSet.cpp  ECS.cpp  Manager.cpp  Pool.cpp  System.cpp  Type.cpp  View.cpp
src/ECS_b/: CMakeLists.txt  ECS.cpp  Pool.cpp  System.cpp
src/Engine/: API.cpp  CMakeLists.txt  Component.cpp  Core.cpp  ECS.cpp  ECS_old.cpp  Engine.cpp  Entity.cpp  Pool.cpp  Properties.cpp  Scene.cpp  Script.cpp  Scripting.cpp  System.cpp  TypescriptTranspiler.cpp
src/PE/: CMakeLists.txt  main.cpp
src/PE/Render/: CMakeLists.txt  Render.cpp
src/Render/: CMakeLists.txt  Camera.cpp  Context.cpp  Material.cpp  Mesh.cpp  Model.cpp  Render.cpp  RenderSystem.cpp  Render_old.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/Resource/: BaseResource.cpp  CMakeLists.txt  Exporter.cpp  IResource.cpp  Importer.cpp  Loader.cpp  NullAllocator.cpp  Properties.cpp  Resource.cpp  ResourceCounter.cpp  ResourceHandle.cpp  ResourceManager.cpp  Utils.cpp  WindowsFileMonitor.cpp
src/Resource/Types/: TextureResource.cpp
src/Scripting/: CMakeLists.txt  Script.cpp  ScriptEngine.cpp  Scripting.cpp
src/Utils/: CMakeLists.txt  ConsoleLogger.cpp  Locator.cpp  NullLogger.cpp  Utils.cpp
test/: CMakeLists.txt  Test_ECS.cpp  Test_Messages.cpp  Test_Resource.cpp
tests/: CMakeLists.txt  Test_Resource.cpp
